MODORDERS-1419 - TestMate integration setup (#1276)
* MODORDERS-1419 - Separating of integration tests - renaming integration tests

* MODORDERS-1419 - Separating of integration tests - renaming integration tests

* MODORDERS-1419 - Adding maven-spotless-plugin